<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/openPrint"
                android:icon="@drawable/ic_baseline_local_printshop_24"
                android:onClick="onClickPrintOpen"
                android:title="@string/open_print" />
<!--            <item android:id="@+id/reConfig"-->
<!--                android:icon="@drawable/ic_baseline_publish_24"-->
<!--                android:title="@string/re_config" />-->
            <item
                android:icon="@drawable/ic_baseline_auto_fix_high_24"
                android:onClick="testApiSample"
                android:id="@+id/tester"
                android:title="Tester" />
            <item android:id="@+id/exit"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/exit" />
        </menu>

    </item>

</menu>